--- a/index.html
+++ b/index.html
@@ -27,10 +27,72 @@
     button:hover {
       background-color: #0056b3;
     }
+
+    .popup {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0, 0, 0, 0.85);
+      border-radius: 16px;
+      padding: 20px;
+      text-align: center;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
+    }
+
+    .popup img {
+      width: 60px;
+      height: 60px;
+      margin-bottom: 20px;
+    }
+
+    .popup p {
+      font-size: 16px;
+      line-height: 1.5;
+      margin-bottom: 20px;
+      color: white;
+    }
+
+    .popup .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #fff;
+      color: #000;
+      font-size: 16px;
+      font-weight: bold;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    .popup .button:hover {
+      background: #f1f1f1;
+      transform: translateY(-2px);
+    }
+
+    .popup .button img {
+      width: 24px;
+      height: 24px;
+      margin-right: 8px;
+    }
   </style>
 </head>
 <body>
   <button id="open-in-chrome">Open Wikipedia in Chrome</button>
+
+  <div class="popup">
+    <img src="https://telegram.org/img/t_logo.svg" alt="Telegram logo">
+    <p>Для зручного доступу до нашого Telegram-каналу, відкрийте це посилання у Safari або Google Chrome</p>
+    <a href="#" class="button">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Google_Chrome_icon_%282011%29.svg/512px-Google_Chrome_icon_%282011%29.svg.png" alt="Google Chrome logo">
+      Відкрити у Google Chrome
+    </a>
+  </div>
 
   <script>
     document.getElementById('open-in-chrome').addEventListener('click', () => {
