--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telegram Popup</title>
+  <title>Open in Chrome</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -70,10 +70,39 @@
   <div class="popup">
     <img src="https://telegram.org/img/t_logo.svg" alt="Telegram logo">
     <p>Для зручного доступу до нашого Telegram-каналу, відкрийте це посилання у Safari або Google Chrome</p>
-    <a href="#" class="button">
+    <button id="open-in-chrome" class="button">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Google_Chrome_icon_%282011%29.svg/512px-Google_Chrome_icon_%282011%29.svg.png" alt="Google Chrome logo">
       Відкрити у Google Chrome
-    </a>
+    </button>
   </div>
+
+  <script>
+    document.getElementById('open-in-chrome').addEventListener('click', () => {
+      const url = 'https://www.wikipedia.org'; // Заміна на потрібне посилання
+
+      // Для Android: спробуємо відкрити в Google Chrome за допомогою intent://
+      const intentUrl = `intent://${url.replace(/^https?:\/\//, '')}#Intent;scheme=https;package=com.android.chrome;end`;
+
+      // Для iOS: використання звичайного посилання для відкриття в браузері
+      const iosChromeUrl = 'googlechrome://www.wikipedia.org'; 
+
+      // Перевірка користувача на Android
+      if (navigator.userAgent.match(/android/i)) {
+        window.location.href = intentUrl; // Відкриваємо через intent для Android
+      }
+      // Перевірка користувача на iOS
+      else if (navigator.userAgent.match(/iPhone|iPad|iPod/i)) {
+        setTimeout(function() {
+          window.location.href = iosChromeUrl; // Спробуємо відкрити через googlechrome:// на iOS
+        }, 25);
+        setTimeout(function() {
+          window.location.href = url; // Якщо Chrome не відкрився, відкриваємо через Safari
+        }, 500);
+      } else {
+        // Для інших платформ, відкриваємо через стандартне посилання
+        window.location.href = url;
+      }
+    });
+  </script>
 </body>
 </html>
