--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-color: #f4f4f9;
+      background-image: url('image 21.jpg');
+      background-repeat: no-repeat;
     }
 
     .popup {
@@ -68,10 +69,10 @@
 </head>
 <body>
   <div class="popup">
-    <img src="https://telegram.org/img/t_logo.svg" alt="Telegram logo">
+    <img src="/socials.svg" alt="Telegram logo">
     <p>Для зручного доступу до нашого Telegram-каналу, відкрийте це посилання у Safari або Google Chrome</p>
     <button id="open-in-chrome" class="button">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Google_Chrome_icon_%282011%29.svg/512px-Google_Chrome_icon_%282011%29.svg.png" alt="Google Chrome logo">
+      <img src="/GoogleChrome.svg" alt="Google Chrome logo">
       Відкрити у Google Chrome
     </button>
   </div>
