--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="popup">
-    <img src="socials.svg" alt="Telegram logo">
+    <img src="./socials.svg" alt="Telegram logo">
     <p>Для зручного доступу до нашого Telegram-каналу, відкрийте це посилання у Safari або Google Chrome</p>
     <button id="open-in-chrome" class="button">
       <img src="GoogleChrome.svg" alt="Google Chrome logo">
