--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 <body>
   <div class="popup">
     <img src="./socials.svg" alt="Telegram logo">
-    <p>Для зручного доступу до нашого Telegram-каналу, відкрийте це посилання у Safari або Google Chrome</p>
+    <p>Для зручного доступу до нашого Telegram-каналу, відкрийте це посилання у Google Chrome</p>
     <button id="open-in-chrome" class="button">
-      <img src="GoogleChrome.svg" alt="Google Chrome logo">
+      <img src="./GoogleChrome.svg" alt="Google Chrome logo">
       Відкрити у Google Chrome
     </button>
   </div>
