--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url('image 21.jpg');
+      background-image: url('bg.jpg');
       background-repeat: no-repeat;
     }
 
