--- a/index.html
+++ b/index.html
@@ -5,54 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Open in Chrome</title>
   <style>
+    @font-face {
+      font-family: 'Gilroy';
+      src: url('https://example.com/fonts/Gilroy-Regular.woff2') format('woff2'); /* Заміна на реальне джерело шрифтів */
+    }
+
     body {
-      font-family: Arial, sans-serif;
+      font-family: Gilroy, Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
       background-image: url('back.jpg');
-      background-repeat: no-repeat;
     }
 
     .popup {
-      position: relative;
-      background: rgba(0, 0, 0, 0.85);
-      border-radius: 16px;
-      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 32px;
+      width: 335px;
+      padding: 32px;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 8px;
+      backdrop-filter: blur(2px);
+      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
       text-align: center;
-      width: 90%;
-      max-width: 400px;
-      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
-      color: white;
     }
 
     .popup img {
       width: 60px;
       height: 60px;
-      margin-bottom: 20px;
     }
 
     .popup p {
       font-size: 16px;
       line-height: 1.5;
-      margin-bottom: 20px;
+      color: #333;
+      margin: 0;
     }
 
     .popup .button {
-      display: inline-flex;
+      display: flex;
       align-items: center;
       justify-content: center;
       background: #fff;
       color: #000;
       font-size: 16px;
-      font-weight: bold;
+      font-weight: 500;
       text-decoration: none;
-      padding: 10px 20px;
+      padding: 16px 8px;
       border-radius: 8px;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      gap: 8px;
       transition: background 0.3s, transform 0.2s;
+      cursor: pointer;
+      width: 100%;
     }
 
     .popup .button:hover {
@@ -60,10 +71,14 @@
       transform: translateY(-2px);
     }
 
+    .popup .button span {
+      flex-grow: 1;
+      text-align: left;
+    }
+
     .popup .button img {
       width: 24px;
       height: 24px;
-      margin-right: 8px;
     }
   </style>
 </head>
@@ -72,8 +87,8 @@
     <img src="./socials.svg" alt="Telegram logo">
     <p>Для зручного доступу до нашого Telegram-каналу, відкрийте це посилання у Google Chrome</p>
     <button id="open-in-chrome" class="button">
-      <img src="./GoogleChrome.svg" alt="Google Chrome logo">
-      Відкрити у Google Chrome
+      <span>Відкрити у Google Chrome</span>
+      <img src="GoogleChrome.svg" alt="Google Chrome logo">
     </button>
   </div>
 
