--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url('back.jpg');
+      background-image: url('backgroundjpg.jpg');
     }
 
     .popup {
